deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-service
  labels:
    app.kubernetes.io/name: banking-service
    app.kubernetes.io/component: Backend
    app.kubernetes.io/part-of: banking
    app.kubernetes.io/instance: REPLACE_ENV
    app.kubernetes.io/version: REPLACE_VERSION
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: banking-service
      app.kubernetes.io/instance: REPLACE_ENV
      app.kubernetes.io/version: REPLACE_VERSION
  template:
    metadata:
      labels:
        app.kubernetes.io/name: banking-service
        app.kubernetes.io/component: Pod
        app.kubernetes.io/part-of: banking-service
        app.kubernetes.io/instance: REPLACE_ENV
        app.kubernetes.io/version: REPLACE_VERSION
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: banking-service
          image: danielr1996/banking-service
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
        - name: postgres
          image: postgres:12.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pvc
---
